# equilibrium_model

./: .gitignore  CMakeLists.txt  README.md  equilibrium_model.sln  functions.cpp  main.cpp  n-body
equilibrium_model/: ClassDiagram.cd  Constants.h  Particle.h  equilibrium_model.vcxproj  equilibrium_model.vcxproj.filters  gravity_differential_equation.cpp  main  main.cpp  measurements.txt  vec.h  visual.py  wrapper.cpp  wrapper.h
equilibrium_model/scripts/: visual.py  visualisation_mesurements.pyproj
include/: Constants.h  Particle.h  header.h  vec.h
scripts_python/: visual.py
